--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!--Navegador-->
     <nav class="navbar navbar-expand-md navbar-light sticky-top bg-secondary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"><img src="Imagenes/Logo.png" alt="logo"><span>Design</span></a>
+          <a class="navbar-brand" href="#"><img src="imagenes/logo.png" alt="logo"><span>Design</span></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -38,10 +38,10 @@
       <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="Imagenes/foto1.jpg" class="d-block w-100" alt="importancia de nuestros servicios">
+            <img src="imagenes/foto1.jpg" class="d-block w-100" alt="importancia de nuestros servicios">
           </div>
           <div class="carousel-item">
-            <img src="Imagenes/foto2.jpg" class="d-block w-100" alt="presentacion de la empresa">
+            <img src="imagenes/foto2.jpg" class="d-block w-100" alt="presentacion de la empresa">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -64,15 +64,15 @@
           </div>
           <div class="row">
               <div class="col-md-4">
-                <img src="Imagenes/Trabajo1.jpg" class="img-fluid" alt="trabajo 1">
+                <img src="imagenes/trabajo1.jpg" class="img-fluid" alt="trabajo 1">
                 <p class="h6">Mi primer proyecto hecho solamente en HTML y con nociones basicas de CSS, en este proyecto se aprendio lo basico para poder seguir avanzando.</p>
               </div>
               <div class="col-md-4">
-                <img src="Imagenes/Trabajo2.jpg" class="img-fluid" alt="Trabajo 2">
+                <img src="imagenes/trabajo2.jpg" class="img-fluid" alt="Trabajo 2">
                 <p class="h6">El segundo proyecto que realice estudiando en CODERHOUSE en el cual ya estaba aplicando FLEXBOX y GRID para acomodar los objetos y darle dimension a la pagina.</p>
               </div>
               <div class="col-md-4">
-                <img src="Imagenes/Trabajo3.jpg" class="img-fluid" alt="trabajo 3">
+                <img src="imagenes/trabajo3.jpg" class="img-fluid" alt="trabajo 3">
                 <p class="h6">Este proyecto fue el tercero que realice y fue donde apique por primera vez el conocimiento sobre Bootstrap.</p>
               </div>
             </div>
