--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="css/style.css" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/046ccfbbf9.js" crossorigin="anonymous"></script>
     <title>AK Design - Agencia de desarrollo Web</title>
   </head>
   <body>
     <!--Navegador-->
-    <nav class="navbar navbar-expand-md navbar-light sticky-top bg-secondary">
+    <nav class="navbar navbar-expand-md navbar-light sticky-top bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"><img src="imagenes/logo.png" alt="logo"><span>Design</span></a>
+          <a class="navbar-brand" href="#"><img src="imagenes/logo.png" alt="logo"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -28,7 +29,13 @@
                 <a class="nav-link" href="#portfolio">Portfolio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#service">Servicios</a>
+                <a class="nav-link" href="#nosotros">Nosotros</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#servicios">Servicios</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#contacto">Contacto</a>
               </li>
             </ul>
           </div>
@@ -62,7 +69,7 @@
               <h3>Portfolio - Diseño de Paginas Web</h3>
             </div>
           </div>
-          <div class="row">
+          <div class="row altura">
               <div class="col-md-4">
                 <img src="imagenes/trabajo1.jpg" class="img-fluid" alt="trabajo 1">
                 <p class="h6">Mi primer proyecto hecho solamente en HTML y con nociones basicas de CSS, en este proyecto se aprendio lo basico para poder seguir avanzando.</p>
@@ -79,8 +86,47 @@
           </div>
         </div>
       </section>
+
+      <!--Nosotros-->
+      <section id="nosotros">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12 text-center">
+              <h3>Nuestra Historia</h3>
+            </div>
+          </div>
+          <div class="row altura">
+            <div class="col-md-6">
+                <img src="imagenes/nosotros.jpg" class="img-fluid" alt="nosotros">
+            </div>
+            <div class="col-md-6">
+              <p>Somos una empresa que se formo desde la idea de unos amigos con pasion por el diseño, luego conocimos el desarrollo Web y lo agregamos como parte fundamental para poder complementar nuestras aptitudes y hoy en dia te ayudamos a <b>lograr tus sueños</b></p>
+              <p>Pudimos salir adelante como equipo y hoy en dia tenemos 23 empleados a nuestro cargo, haciendo todo lo posible para que tu pagina quede en perfecto estado.</p>
+            </div>
+            <div class="row altura">
+              <div class="col-md-12 text-center">
+                <h3>Nuestro Equipo</h3>
+              </div>
+            </div>
+            <div class="row altura">
+              <div class="col-md-4 text-center">
+                <img src="imagenes/juan.jpg" class="img-fluid" alt="juan">
+                <h6>Encargado del area de Diseño</h6>
+              </div>
+              <div class="col-md-4 text-center">
+                <img src="imagenes/marcos.jpg" class="img-fluid" alt="juan">
+                <h6>Encargado del area de Programacion</h6>
+              </div>
+              <div class="col-md-4 text-center">
+                <img src="imagenes/caro.jpg" class="img-fluid" alt="juan">
+                <h6>Encargada del area de Marketing</h6>
+              </div>
+            </div>
+        </div>
+      </section>
+
       <!--Servicio-->
-      <section id="service">
+      <section id="servicios">
         <div class="container">
           <div class="row">
             <div class="text-center">
@@ -141,26 +187,67 @@
           </div>
         </div>
       </section>
-      <!--footer-->
-      <footer>
-        <div class="container-fluid">
-          <div class="row text-center">
-            <p class="h5">Dejanos tus mail y tu consulta, te estaremos respondiendo a la brevedad</p>
-          </div>
+
+      <section id="contacto">
+        <div class="container">
           <div class="row">
-            <div class="mb-3 col-md-4 offset-md-4 text-center">
-              <label for="ValidationCustom01" class="form-label" required>Email address</label>
-              <input type="email" class="form-control" id="ValidationCustom01" placeholder="*****@***mail.com">
+            <div class="text-center">
+              <h3>Contactanos</h3>
             </div>
-            <div class="mb-3 col-md-6 offset-md-3 text-center">
-              <label for="exampleFormControlTextarea1" class="form-label" required>Example textarea</label>
-              <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-              <button type="submit" class="btn btn-primary">Submit</button>
-            </div>
+            <form>
+              <div class="row altura">
+                <div class="col">
+                  <input type="text" class="form-control" placeholder="First name" aria-label="First name" required>
+                </div>
+                <div class="col">
+                  <input type="text" class="form-control" placeholder="Last name" aria-label="Last name" required>
+                </div>
+                <div class="row mb-3 altura2">
+                  <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
+                  <div class="col-sm-10">
+                    <input type="email" class="form-control" id="inputEmail3" placeholder="******@**mail.com">
+                  </div>
+                </div>
+                <div class="row mb-3 altura2">
+                  <textarea placeholder="Hacenos tu consulta"></textarea>
+                </div>
+              </div>
+              <input type="submit" class="btn btn-primary">
+            </form>
           </div>
         </div>
+      </section>
+      <!--footer-->
+      <footer>
+        <div class="container__footer">
+          <div class="box__footer">
+            <div class="logo">
+              <img src="imagenes/logo.png" alt="">
+            </div>
+            <div class="terms">
+              <p>Una empresa dedicada al diseño y desarrollo de paginas Web, para que tu empresa siga creciendo.</p>
+            </div>
+          </div>
+          <div class="box__footer">
+            <h2>Compañia</h2>
+            <a href="#portfolio">Trabajos</a>
+            <a href="#nosotros">Acerca de</a>
+            <a href="#servicios">Servicios</a>
+            <a href="#contacto">Contacto</a>
+          </div>
+          <div class="box__footer">
+            <h2>Redes</h2>
+            <a href="https://es-la.facebook.com/" target="_blank"><i class="fa-brands fa-facebook-square"></i> Facebook</a>
+            <a href="https://www.instagram.com/?hl=es" target="_blank"><i class="fa-brands fa-instagram"></i> Instagram</a>
+            <a href="https://wa.me/31174336" target="_blank"><i class="fa-brands fa-whatsapp"></i> Whatsapp</a>
+            <a href="https://ar.linkedin.com/" target="_blank"><i class="fa-brands fa-linkedin"></i> LinkedIn</a>
+          </div>
+        </div>
+        <div class="box__copyright">
+          <hr>
+          <p>Todos los derechos reservado © 2022 <b>Agustin Korstanje</b></p>
+        </div>
       </footer>
-
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
